--- a/index.tpl.html
+++ b/index.tpl.html
@@ -1,9 +1,20 @@
 <title>${title}</title>
 
+<body>Redirecting...</body>
+
+<!-- Google Analytics -->
+<script src="https://www.googletagmanager.com/gtag/js?id=${gtag}"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', '${gtag}');
+</script>
+
 <!-- Redirection code -->
 <script>
     // Used to indicate failure
-    const NOT_FOUND = '/404.html';
+    const NOT_FOUND = '/not-found.html';
 
     // Used to ensure URLs have the http/s scheme
     const httpize = url => url.startsWith('http') || url.startsWith('/') ? url : 'http://' + url;
@@ -39,7 +50,10 @@
             const url = new URL(window.location.href);
             if (url.searchParams.has('path')) {
                 window.location.href = httpize(await process(url.searchParams.get('path')));
+            } else if (url.pathname !== '/') {
+                window.location.href = httpize(await process(url.pathname.slice(1)));
             } else {
+                console.log(url)
                 window.location.href = httpize('${root}');
             }
 
