Reduce error correction level

--- a/qrgen.html
+++ b/qrgen.html
@@ -55,7 +55,7 @@
             text: `mngo.org/${text}`,
             width: qrSize,
             height: qrSize,
-            correctLevel: QRCode.CorrectLevel.H,
+            correctLevel: QRCode.CorrectLevel.M,
             dotScale: 0.8,
             logo: "mango.png",
             logoWidth: qrSize / 2,
